--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "react": "16.8.3",
-    "react-native": "0.59.5"
+    "react-native": "0.59.5",
+    "react-native-gesture-handler": "^1.2.0",
+    "react-navigation": "^3.9.1"
   },
   "devDependencies": {
     "@babel/core": "7.4.3",
